# fx-agent

ai-backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  BRANCH_POLICY.md  Dockerfile  INTERRUPT_IMPLEMENTATION.md  README.md  README.zh-CN.md  RECOVERY_SUMMARY.md  SYSTEM_PROMPT_INTEGRATION_SOLUTION.md  alembic.ini  docker-compose.yml  jenkins-docker-deploy.sh  pyproject.toml  requirements.txt  requirements_langchain.txt  update_db.sh  update_db_docker.sh
ai-backend/backend/: .ruff.toml  README.md  __init__.py  cli.py  main.py  requirements.txt  run.py  sample.env  sample.env.local  sample.env.production
ai-backend/backend/agents/: README.md  __init__.py  agent.py
ai-backend/backend/agents/agents/: __init__.py  assistant_agent.py  data_analyze_agent.py  extract_parameters_agent.py  general_chat_agent.py  get_users_agent.py  intent_recognition_agent.py
ai-backend/backend/agents/config/: examples.py  extract_parameters.py  history_compression_config.py  langsmith_config.py  mcp.py  setting.py
ai-backend/backend/agents/schema/: agent.py  analyze.py  base.py  base_agent.py  dialog.py  intent.py  slot.py
ai-backend/backend/agents/services/: assistant_service.py  slot_service.py
ai-backend/backend/agents/tools/: data_export_tool.py  data_to_markdown.py  export_example.py  mcp_client.py  mcp_client_mcp.py  stream_task.py  task_manager.py  task_orchestrator.py  workflow_info.py
ai-backend/backend/agents/utils/: cache.py  data_reduce_strategy.py  format_output.py  time_utils.py  token_utils.py
ai-backend/backend/alembic/: env.py  script.py.mako
ai-backend/backend/alembic/versions/: 2025-08-13-08_54_16-ba7f32ab369c_create_tables.py  2025-08-14-20_28_49-1a39f6e9212d_add_username_email_to_ai_assistant_.py  2025-08-15-16_02_08-8b11f645798b_同步数据库模型变更.py  2025-08-15-16_03_36-20956ef6a65a_删除废弃的表和索引.py  2025-08-15-16_12_35-1dd37692aa40_检查模型与数据库差异.py  2025-08-15-16_20_17-9e38c70d32d6_清理废弃的表和索引.py  (+71 more)
ai-backend/backend/app/: __init__.py  router.py
ai-backend/backend/app/home/: README.md  (+1 more)
ai-backend/backend/common/: ai_logger.py  enums.py  i18n.py  log.py  logging_chatopenai.py  mcp_logger.py  model.py  pagination.py  schema.py
ai-backend/backend/core/: conf.py  path_conf.py  registrar.py  security.py
ai-backend/backend/database/: db.py  redis.py
ai-backend/backend/middleware/: access_middleware.py  i18n_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py
ai-backend/backend/plugin/: tools.py
ai-backend/backend/scripts/: init_plugin.py
ai-backend/backend/utils/: _await.py  build_tree.py  demo_site.py  encrypt.py  file_ops.py  format_output.py  health_check.py  import_parse.py  re_verify.py  redis_info.py  request_parse.py  serializers.py  server_info.py  snowflake.py  time_utils.py
ai-backend/docs/: ALEMBIC_GIT_HOOKS.md  API_CHAT_COMPLETION.md  AUTO_MIGRATION_GUIDE.md  COMMIT_CONVENTION.md  HISTORY_COMPRESSION_CHANGELOG.md  ONBOARDING_CHECKLIST.md  QUICK_START_GUIDE.md  README_GIT_HOOKS.md  local-development.md  troubleshooting-guide.md
ai-backend/scripts/: README.md  run.sh
ai-backend/scripts/database/: fix-sequences.sh  init-database.sh  run-migrations.sh  sys_menu_sync.sql
ai-backend/scripts/deployment/: README.md  celery.sh  health-check.sh  start.sh
ai-backend/scripts/dev/: install-git-hooks.sh  migrate.sh  pre-commit-db-migration.py  pre-commit-fix-sequences.py  pre-commit.sh  start.sh
(+764 files in other folders)
